# my-mvp-app

./: package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted--Fix-AI-Should-Guide-Users-Step-by-Step-Instead-of-Dumping-Everything-at-Once-1-AI-Should-Show--1741044409193.txt  Pasted--Recommended-First-Time-User-Homepage-1-Minimal-Welcoming-Get-Started-Screen-Headline-Welco-1740561569145.txt  Pasted-1-Content-Manager-Dashboard-Upon-entering-the-Content-Manager-users-are-greeted-with-a-clean-intu-1740587041736.txt  Pasted-As-a-follow-up-to-my-previous-request-about-improving-AI-s-extraction-accuracy-I-ve-identified-a-UX-1741044593479.txt  Pasted-As-a-follow-up-to-my-previous-request-about-improving-AI-s-extraction-accuracy-I-ve-identified-a-UX-1741044639156.txt  Pasted-As-a-follow-up-to-my-previous-request-about-improving-AI-s-extraction-accuracy-there-s-also-a-UX-is-1741044372531.txt  Pasted-Comprehensive-User-Journey-for-Posting-Content-1-Landing-on-the-Content-Manager-UI-Elements-Layou-1740622991313.txt  Pasted-Comprehensive-User-Journey-for-an-AI-Powered-Social-Media-Management-Platform-Overview-The-platform--1740559002976.txt  Pasted-Detailed-Breakdown-of-Fixes-1-AI-Should-Show-What-It-Found-First-AI-Here-s-what-I-found-in-yo-1741044568861.txt  Pasted-Enhance-AI-Parsing-for-Brand-Voice-Extraction-Modify-the-AI-s-document-parsing-to-ensure-more-accura-1741028411150.txt  Pasted-Enhance-AI-Parsing-for-Brand-Voice-Extraction-Modify-the-AI-s-parsing-capabilities-to-extract-key-br-1741027487458.txt  (+10 more)
client/: index.html
server/: index.ts  routes.ts  (+1 more)
(+32 files in other folders)
