[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-cloud-documentai>=3.2.0",
    "google-cloud-language>=2.17.0",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.5",
    "pymupdf>=1.25.3",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.3",
    "snscrape>=0.7.0.20230622",
    "spacy>=3.8.4",
    "textract>=1.5.0",
    "unstructured>=0.16.23",
]
